# mcp-ga4

./: .gitignore  README.md  main.py  pyproject.toml
localserver/: client_sse.py  client_stdio.py  ga4_client.py  ga4_server.json  ga4_server.py  gemini_client.py  groq_client.py  openai_client.py
localserver/actions/: _run_report_deprecated.py  run_admin_services.py  run_comparative_report.py  run_realtime_report.py  run_report.py  run_report_with_ordering.py  tabulated.py
localserver/exception/: exception.py
localserver/gemini_actions/: run_realtime_report.py
localserver/gemini_utilities/: clean_schema.py  stdio_chat_loop.py  system_input.py  tools_converter.py
localserver/logfolder/: logger.py  logging_configs.json  logging_format.py
localserver/logfolder/logs/: ga4_app.log.jsonl
localserver/openai_utilities/: server_connect.py  system_input.py
mcpserver/: client_sse.py  client_stdio.py
